--- a/css/home.css
+++ b/css/home.css
@@ -1,6 +1,6 @@
-body{
+body {
     background-color: antiquewhite;
-    
+
 }
 
 .item h1 {
@@ -14,32 +14,37 @@ body{
     bottom: 55px;
 }
 
-.item:hover .back{
+.item:hover .back {
     height: 30px;
 }
 
 .container h4 {
-    background-image: linear-gradient(90deg, green , antiquewhite);
+    background-image: linear-gradient(90deg, green, antiquewhite);
     background-clip: text;
     color: transparent;
 }
 
 
 
-#error{
-  
+#error {
+
     background-color: rgba(0, 0, 0, 0.1);
 
 }
 
 
 
-#errorInner{
+#errorInner {
     width: 35%;
     height: 35%;
     background-color: brown;
 }
 
-.fa-regular{
+.fa-regular {
     cursor: pointer;
+}
+
+
+.firsttr td {
+    font-size: 10px;
 }
