--- a/css/media.css
+++ b/css/media.css
@@ -9,6 +9,12 @@
     #errorInner h5 {
         font-size: 10px;
     }
+    .table tr td button{
+        font-size: 9px;
+    }
+    .table tr td a{
+        font-size: 9px;
+    }
   }
 
 
@@ -23,8 +29,14 @@
     #errorInner h5 {
         font-size: 15px;
     }
+    .table tr td button{
+        font-size: 12px;
+    }
+    .table tr td a{
+        font-size: 12px;
+    }
   }
- }
+ 
 
 
 @media (min-width: 992px) {
@@ -33,6 +45,12 @@
     }
     #errorInner h5 {
         font-size: 17px;
+    }
+    .table tr td button{
+        font-size: 15px;
+    }
+    .table tr td a{
+        font-size: 15px;
     }
  }
 
@@ -45,7 +63,7 @@
         font-size: 20px;
     }
  }
- }
+ 
 
 
 @media (min-width: 1400px) { 
